<resources>
    <string name="app_name">Relevamientos ART</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_restore_password">Recuperar contraseña</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña o el usuario son incorrectos</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">Es necesario otorgar permisos</string>


    <!--Strings related to Main Activity -->
    <string name="title_activity_main">Visitas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ajustes</string>
    <string name="salir">Salir</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="msj_sincronizandoVisitas">Las visitas se están sincronizando</string>
    <string name="internet_requerido">No dispone de acceso a internet</string>
    <string name="error_carga_visitas">Se ha producido un error al cargar las visitas</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rar">Relevamiento de agentes de riesgo</string>
    <string name="rgrl">R.G.R.L.</string>
    <string name="exportar">Exportar formulario</string>
    <string name="capacitacion">Capacitación</string>
    <string name="fecha_regul">Fecha regul.</string>

    <!-- Strings related to Fragment de riesgos -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_nombre_trabajador">Nombre</string>
    <string name="hint_cuil_trabajador">CUIL</string>
    <string name="hint_apellido_trabajador">Apellido</string>
    <string name="hint_fechaIngreso_trabajador">Ingreso</string>
    <string name="hint_fechaFin_trabajador">Fin exposición</string>
    <string name="hint_fechaInicio_trabajador">Inicio exposición</string>
    <string name="label_datosTrabajador">Datos del trabajador</string>
    <string name="label_riesgos">Riesgos</string>
    <string name="title_rgrl">R.G.R.L.</string>
    <string name="constancia">Constancia de visita</string>
    <string name="hint_observaciones">Observaciones</string>
    <string name="lbl_lista_tareas">Tareas realizadas</string>
    <string name="guardar">Guardar</string>

    <!--Strings related to visita_detalle -->
    <string name="razon_social">Razón social</string>
    <string name="domicilio">Domicilio</string>
    <string name="cuit">CUIT</string>
    <string name="contrato_num">Contrato N°</string>
    <string name="fecha_visita">Fecha de visita</string>
    <string name="actividad">Actividad</string>
    <string name="ciuu">CIIU</string>
    <string name="establec_nombre_numero">N° y Nombre del estab.</string>
    <string name="trabajadores_num">N° trabajadores</string>
    <string name="codigo_postal">Código postal</string>
    <string name="localidad">Localidad</string>
    <string name="provincia">Provincia</string>
    <string name="telefono">Teléfono</string>
    <string name="codigo_estab_afip">Código del estab. AFIP</string>
    <string name="persona_contactada">Persona contactada</string>
    <string name="e_mail">E-mail</string>
    <string name="lbl_lista_attendees">Empleados que asistieron</string>
    <string name="metodologia">Metodología</string>
    <string name="contenidos">Contenidos</string>
    <string name="curso">Datos del curso</string>
    <string name="verFotos">Ver fotos</string>
    <string name="borrarImagen">¿Desea borrar la imagen?</string>
    <string name="borrarImagen_Title">Borrar imagen</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardadoYpdf">La visita se ha completado</string>

    <!--Strings related to medición de ruido -->
    <string name="medicion_ruido_title">Medición de ruido</string>
    <string name="medir">Medir</string>
    <string name="parar">Parar</string>
    <string name="descripciondb">Descripción</string>
    <string name="registrar">Registrar</string>
    <string name="borrarRuido">¿Desea borrar la medición seleccionada?</string>
    <string name="borrarMedicion_Title">Borrar medición</string>

    <!--Strings related to generacón de PDF-->
    <string name="error_pdf_constancia_visita">Se ha producido un error al generar el PDF de constancia de visitas.</string>
    <string name="generarPDF_Title">PDF</string>
    <string name="generarPDf">¿Desea generar archivo PDF?</string>
    <string name="pdfGenerado">Se ha generado el PDF</string>

    <!--Strings related to Constancia de Capacitacion -->
    <string name="hint_nombre_curso">Nombre del curso</string>
    <string name="hint_nombre_contenidos">Contenidos</string>
    <string name="hint_nombre_metodologia">Metodología empleada</string>


    <string name="descartar">Descartar</string>
    <string name="editar">Editar</string>
    <string name="Validacion">Validación</string>
    <string name="borrarTrabajador">¿Desea borrar el trabajador seleccionado?</string>
    <string name="borrarTrabajador_Title">Borrar trabajador</string>
    <string name="trabajador_borrado">Se ha borrado el trabajador</string>
    <string name="tareaNoFinalizada">La tarea aún no se encuentra finalizada</string>
    <string name="hint_sector_trabajador">Sector</string>
    <string name="error_carga_institucion">Error al obtener la institucion</string>
    <string name="error_cambio_contraseña">Error al solicitar cambio de contraseña</string>
    <string name="error_usuario_inexistente">No existe un usuario registrado con dicho correo electrónico</string>
    <string name="ultima_pregunta">Ha llegado a la última pregunta</string>
    <string name="primera_pregunta">Se encuentra en la primera pregunta</string>
    <string name="ayuda">Ayuda</string>
    <string name="error_envio_visitas">Se produjo un error al enviar las visitas</string>

    <string name="no_employees_available">Aún no ha cargado ningún empleado</string>
    <string name="no_visits_available">No hay visitas disponibles. Presione el botón sincronizar para obtener nuevas visitas asignadas</string>

    <!--Strings related to titulo -->
    <string name="titulo_detalle_visita">Detalle</string>
    <string name="titulo_RGRL">Formulario R.G.R.L.</string>
    <string name="titulo_RAR">Formulario R.A.R.</string>
    <string name="titulo_empleado">Empleado</string>
    <string name="titulo_constancia_visita">Constancia de visita</string>
    <string name="titulo_imagenes">Imágenes</string>
    <string name="titulo_medicion_ruido">Medición de ruido</string>
    <string name="titulo_constancia_capacitacion">Constancia de capacitación</string>
    <string name="titulo_attendee">Asistente</string>
    <string name="titulo_ayuda">Ayuda</string>
    <string name="titulo_riesgos">Riesgos</string>
    <string name="inicio">Inicio</string>
    <string name="datos_visita_titulo">Datos de la visita</string>
    <string name="datos_empresa_titulo">Datos de la empresa</string>
    <string name="prioriodad_visita">Prioridad</string>
    <string name="estado_visita">Estado</string>
    <string name="visita_reintentar_luego">La visita aún se está cargando, reintente nuevamente en unos minutos</string>
    <string name="titulo_visitas">Visitas</string>


</resources>
