<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_rar"
        android:title="@string/rar"
        android:orderInCategory="1"
        android:icon="@drawable/ic_rar"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_rgrl"
        android:title="@string/rgrl"
        android:orderInCategory="2"
        android:icon="@drawable/ic_rgrl"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_capacitacion"
        android:title="@string/capacitacion"
        android:orderInCategory="4"
        android:icon="@drawable/ic_capacitacion"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_constancia"
        android:title="@string/constancia"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_constancia_visita"
        android:visible="false"/>

</menu>
