<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.fernando.relevamientosart.ConstanciaCapacitacion.ConstanciaCapacitacionFragment"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/curso"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre del curso"
                android:textSize="@dimen/detalle_valor_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contenidos"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contenidos"
                android:textSize="@dimen/detalle_valor_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metodologia"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Metodología empleada"
                android:textSize="@dimen/detalle_valor_label" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_lista_attendees"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_size"/>

        <include layout="@layout/fragment_attendee_list" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_agregarAttendee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/item_margin"
        app:fabSize="normal"
        android:longClickable="true"
        android:src="@drawable/ic_agregar"
        />

</android.support.design.widget.CoordinatorLayout>