<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fernando.relevamientosart.VisitDetalleFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_visita_titulo"
                style="@style/AppTheme.tituloPrincipal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/tv_fecha_visita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fecha_visita"
                        android:imeActionLabel="@string/fecha_visita"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/tv_estado_visita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/estado_visita"
                        android:imeActionLabel="@string/estado_visita"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/tv_prioriodad_visita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prioriodad_visita"
                    android:imeActionLabel="@string/prioriodad_visita"
                    android:inputType="text"
                    android:maxLines="1"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_empresa_titulo"
                style="@style/AppTheme.tituloPrincipal"
            />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/tv_detalle_nombre_institucion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/razon_social"
                    android:imeActionLabel="@string/razon_social"
                    android:inputType="text"
                    android:maxLines="1"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/tv_detalle_direccion_institucion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/domicilio"
                    android:imeActionLabel="@string/domicilio"
                    android:inputType="text"
                    android:maxLines="1"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tv_provincia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/provincia"
                        android:imeActionLabel="@string/provincia"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/tv_localidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/localidad"
                        android:imeActionLabel="@string/localidad"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tv_cuit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="CUIT"
                        android:imeActionLabel="CUIT"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/tv_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Teléfono"
                        android:imeActionLabel="Teléfono"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tv_actividad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Actividad"
                        android:imeActionLabel="Actividad"
                        android:inputType="text"
                        android:maxLines="1"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
